# log-alert-generator

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  roadmap.md  spec.md
config/: config.yaml
src/log_alert_generator/: log_alert.py
src/log_alert_generator/parser/: log_parser.py
src/log_alert_generator/utils/: log_generator.py
tests/: test_log_parser.py
