[project]
name = "log-alert-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Josh Benson",email = "handle2001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]

[tool.poetry]
packages = [{include = "log_alert_generator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
